--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,31 @@
 [package]
-name = "vmm-reference"
+name = "nanovmm"
 version = "0.1.0"
 authors = ["rust-vmm AWS maintainers <rust-vmm-maintainers@amazon.com>"]
 edition = "2018"
 license = "Apache-2.0 OR BSD-3-Clause"
 
+[lib]
+name = "nanovmm"
+path = "src/vmm/src/lib.rs"
+
 [dependencies]
-vmm = { path = "src/vmm" }
-api = { path = "src/api" }
+event-manager = "0.2.1"
+kvm-bindings = { version = "0.5.0", features = ["fam-wrappers"] }
+kvm-ioctls = "0.11.0"
+libc = "0.2.91"
+linux-loader = { version = "0.4.0", features = ["bzimage", "elf"] }
+vm-allocator = "0.1.0"
+vm-memory = { version = "0.7.0", features = ["backend-mmap"] }
+vm-superio = "0.5.0"
+vmm-sys-util = "0.8.0"
+vm-device = "0.1.0"
+
+devices = { path = "src/devices" }
+vm-vcpu = { path = "src/vm-vcpu" }
+vm-vcpu-ref = { path = "src/vm-vcpu-ref" }
+utils = { path = "src/utils" }
+arch = { path = "src/arch" }
 
 [workspace]
 members = ["src/vm-vcpu-ref"]
