--- a/src/vm-vcpu-ref/Cargo.toml
+++ b/src/vm-vcpu-ref/Cargo.toml
@@ -10,12 +10,12 @@ license = "Apache-2.0 OR BSD-3-Clause"
 keywords = ["virt", "kvm", "vm"]
 
 [dependencies]
-thiserror = "1.0.30"
-kvm-ioctls = { version = "0.11.0" }
-kvm-bindings = { version = "0.5.0", features = ["fam-wrappers"] }
-vm-memory = "0.7.0"
-libc = "0.2.76"
+thiserror = "^1.0.30"
+kvm-ioctls = { version = "^0.11.0" }
+kvm-bindings = { version = "^0.5.0", features = ["fam-wrappers"] }
+vm-memory = "^0.7.0"
+libc = "^0.2.76"
 
 [dev-dependencies]
-vm-memory = { version = "0.7.0", features = ["backend-mmap"] }
-vmm-sys-util = "0.8.0"
+vm-memory = { version = "^0.7.0", features = ["backend-mmap"] }
+vmm-sys-util = "^0.8.0"
