--- a/src/vm-vcpu/Cargo.toml
+++ b/src/vm-vcpu/Cargo.toml
@@ -7,17 +7,17 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-thiserror = "1.0.30"
-libc = "0.2.76"
-kvm-bindings = { version = "0.5.0", features = ["fam-wrappers"] }
-kvm-ioctls = "0.11.0"
-vm-memory = "0.7.0"
-vmm-sys-util = ">=0.8.0"
-vm-device = "0.1.0"
+thiserror = "^1.0.30"
+libc = "^0.2.76"
+kvm-bindings = { version = "^0.5.0", features = ["fam-wrappers"] }
+kvm-ioctls = "^0.11.0"
+vm-memory = "^0.7.0"
+vmm-sys-util = "^0.8.0"
+vm-device = "^0.1.0"
 
 utils = { path = "../utils" }
 vm-vcpu-ref = { path = "../vm-vcpu-ref" }
 arch = { path = "../arch" }
 
 [dev-dependencies]
-vm-memory = { version = "0.7.0", features = ["backend-mmap"] }
+vm-memory = { version = "^0.7.0", features = ["backend-mmap"] }
